On this device support up to 9 players (#49)
